--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "npm run lint:js"
+    "lint": "npm run lint:js",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -28,6 +29,7 @@
     "fibers": "^5.0.0",
     "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
+    "push-dir": "^0.4.1",
     "sass": "^1.32.7",
     "sass-loader": "^10.1.1"
   }
